Avoid cropping project images.

--- a/assets/css/project-list.css
+++ b/assets/css/project-list.css
@@ -443,6 +443,7 @@
   @supports (object-fit: cover) {
     .proposals .image {
       padding-top: 79.25925926%; /* 428px / 540px */
+      padding-top: 100%;
       display: block;
       position: relative;
       background: rgba(0, 0, 0, 0.1);
@@ -455,6 +456,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-fit: contain;
       /*  
       filter: grayscale(100%);
       transition: filter 0.2s;
